# sugar

./: .gitignore  README.md  setup.py  sugartoy.py
libsugar/src/: CMakeLists.txt  main.cpp  sugar.cpp  sugar.h  toy.cpp
old_python/: Sugar packer.ipynb  cube.py  indexarray.py  jiggler.py  particlegrid3.py
sugar/: __init__.py  sugar.py
